Use StandardCharsets.UTF_8 for string encoding in multiple classes